--- a/play.yaml
+++ b/play.yaml
@@ -1,14 +1,14 @@
 ---
  - name: install apache
    hosts: s-1
-   become: true
+   become_user: ubuntu
    tasks:
      - name: install apache
        apt: name=apache2 state=present
 
  - name: install nginx
    hosts: s-2
-   become: true
+   become_user: ubuntu
    tasks:
      - name: install nginx
        apt: name=nginx state=present
