--- a/play.yaml
+++ b/play.yaml
@@ -1,6 +1,7 @@
 ---
  - name: install apache
    hosts: s1
+   become: yes
    become_user: ubuntu
    tasks:
      - name: install apache
@@ -8,6 +9,7 @@
 
  - name: install nginx
    hosts: s2
+   become: yes
    become_user: ubuntu
    tasks:
      - name: install nginx
